# weevolve

./: .gitignore  AWESOME-LIST-ENTRY.md  LICENSE  MANIFEST.in  PRODUCT-HUNT-DRAFT.md  README.md  SKILL.md  __init__.py  __main__.py  companion.py  config.py  connect.py  conversational.py  core.py  demo.tape  emergence.py  explore.py  fast_scanner.py  genesis_updater.py  install.py  install_hooks.py  integrate.py  inventory.py  license.py  model_router.py  nats_collective.py  observational_memory.py  onboarding.py  package.json  plan.py  post_tool.py  pre_tool.py  project.py  pyproject.toml  qualify.py  skill_export.py  step_validator.py  teacher.py  tiers.py  tinyfish.py  (+5 more)
.github/workflows/: publish.yml  test.yml
companion/: index.html  manifest.json
data/: genesis-curated.db
docs/: index.html
hooks/: __init__.py  context_detector.py  session_end.py
owls/: personas.py  synthesis.py
shared/: __init__.py  constants.py
site/: 8owl-v2.html  8owl.html  manifest.json  seo-enhancements.html  sw.js
skills/weevolve/: SKILL.md
skills/weevolve/scripts/: post-task-evaluate.sh  session-start.sh
tests/: test_innovations.py  test_weevolve.py  test_weevolve_new.py  test_weevolve_wave2.py  test_weevolve_wave3.py
