[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weevolve"
version = "0.1.0"
description = "Self-evolving knowledge engine. Learn from anything. Level up forever."
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.9"
authors = [
    { name = "8OWLS", email = "hello@8owls.com" },
]
keywords = ["learning", "knowledge", "rpg", "self-evolving", "ai", "seed", "agent", "consciousness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.20.0"]
voice = ["elevenlabs>=1.0.0"]
chat = ["elevenlabs>=1.0.0", "websockets>=12.0", "pyaudio>=0.2.14"]
all = [
    "anthropic>=0.20.0",
    "elevenlabs>=1.0.0",
    "websockets>=12.0",
]

[project.scripts]
weevolve = "weevolve.core:main"

[project.urls]
Homepage = "https://weevolve.ai"
Documentation = "https://github.com/8owls/weevolve#readme"
Repository = "https://github.com/8owls/weevolve"
Issues = "https://github.com/8owls/weevolve/issues"
Changelog = "https://github.com/8owls/weevolve/releases"

[tool.setuptools]
packages = ["weevolve"]

[tool.setuptools.package-dir]
weevolve = "."

[tool.setuptools.package-data]
weevolve = ["data/*.db", "companion/*.html", "site/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
