[build-system]
requires = ["setuptools>=68.0,<78.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weevolve"
version = "0.1.0"
description = "The protocol that teaches agents to learn how to learn. SEED protocol for self-evolving agents."
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.9"
authors = [
    { name = "8OWLS", email = "hello@8owls.com" },
]
keywords = [
    "learning",
    "knowledge",
    "rpg",
    "self-evolving",
    "ai",
    "seed",
    "agent",
    "consciousness",
    "owl",
    "protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Adaptive Technologies",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.20.0"]
voice = ["elevenlabs>=1.0.0"]
chat = ["elevenlabs>=1.0.0", "websockets>=12.0", "pyaudio>=0.2.14"]
all = [
    "anthropic>=0.20.0",
    "elevenlabs>=1.0.0",
    "websockets>=12.0",
]

[project.scripts]
weevolve = "weevolve.core:main"

[project.urls]
Homepage = "https://weevolve.ai"
Documentation = "https://github.com/aro-brez/weevolve#readme"
Repository = "https://github.com/aro-brez/weevolve"
Issues = "https://github.com/aro-brez/weevolve/issues"
Changelog = "https://github.com/aro-brez/weevolve/releases"

[tool.setuptools]
packages = ["weevolve", "weevolve.hooks", "weevolve.owls", "weevolve.shared"]

[tool.setuptools.package-dir]
weevolve = "."
"weevolve.hooks" = "hooks"
"weevolve.owls" = "owls"
"weevolve.shared" = "shared"

[tool.setuptools.package-data]
weevolve = [
    "data/*.db",
    "companion/*.html",
    "site/*.html",
    "site/*.json",
    "site/*.js",
    "skills/**/*.md",
    "skills/**/*.sh",
    "SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
